# tree-sitter-objcpp

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  binding.gyp  build.sh  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/python/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_objcpp/: binding.c
bindings/python/tree_sitter_objcpp.egg-info/: PKG-INFO  SOURCES.txt
src/: grammar.json  node-types.json
tree-sitter-c/: grammar.js
tree-sitter-c/src/: grammar.json  node-types.json  parser.c
tree-sitter-objc/: grammar.js  package.json
tree-sitter-objc/src/: grammar.json  node-types.json
tree-sitter-objcpp/: grammar.js
tree-sitter-objcpp/src/: grammar.json  node-types.json
